# services/site-api/docs/swagger.yaml
@@ -93,6 +93,42 @@ definitions:
       title:
         type: string
     type: object
+  dtos.ContactSubmitReq:
+    properties:
+      company:
+        type: string
+      email:
+        type: string
+      linkedinProfile:
+        type: string
+      message:
+        type: string
+      name:
+        type: string
+      phoneNumber:
+        type: string
+      preferredContact:
+        enum:
+        - phone
+        - email
+        type: string
+      surname:
+        type: string
+    required:
+    - email
+    - message
+    - name
+    - phoneNumber
+    - preferredContact
+    - surname
+    type: object
+  dtos.ContactSubmitResp:
+    properties:
+      id:
+        type: string
+      ok:
+        type: boolean
+    type: object
   dtos.ErrorResp:
     properties:
       code:
@@ -429,6 +465,39 @@ paths:
       summary: Get a published article
       tags:
       - articles
+  /api/contact:
+    post:
+      consumes:
+      - application/json
+      description: Registers a "Contact us" submission and triggers the acknowledgement
+        email to the contact plus a notification email to the team.
+      parameters:
+      - description: Contact submission
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dtos.ContactSubmitReq'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dtos.ContactSubmitResp'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dtos.ErrorResp'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dtos.ErrorResp'
+      security:
+      - BearerAuth: []
+      summary: Submit a contact request
+      tags:
+      - contact
   /api/topics:
     get:
       description: Curated taxonomy with published-article counts.
